Overflow bug

--- a/src/styles/commonStyles.css
+++ b/src/styles/commonStyles.css
@@ -30,8 +30,6 @@
 /* reset css */
 
 html, body {
-  margin: 0;
-  padding: 0;
   font-size: 1.5rem;
   /* box-sizing: border-box; */
   background-color: #000;
